--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,12 @@
         <artifactId>spire.Common</artifactId>
         <version>2.2.0</version>
     </dependency> 
-     -->   
+     --> 
+      <dependency>
+	     <groupId>com.lowagie</groupId>
+	     <artifactId>iText</artifactId>
+	     <version>2.1.5</version>
+	 </dependency> 
 </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
